--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org465c4f6">
-<h2 id="org465c4f6">Navigation instructions</h2>
+<section id="slide-orgfbddd49">
+<h2 id="orgfbddd49">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgaf1ed2f">
-<h2 id="orgaf1ed2f">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orgb2474dc">
+<h2 id="orgb2474dc">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org820fa32" data-audio-src="python/">
-<h2 id="org820fa32">Overview</h2>
+<section id="slide-orgf502c15" data-audio-src="python/">
+<h2 id="orgf502c15">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -187,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-orge7a3d26" data-audio-src="python/title.mp3">
-<h3 id="orge7a3d26">Python</h3>
+<section id="slide-org0f8383a" data-audio-src="python/title.mp3">
+<h3 id="org0f8383a">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org80b29af">
-<h3 id="org80b29af">Jupyter notebooks</h3>
+<section id="slide-org4669f66">
+<h3 id="org4669f66">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -219,14 +219,14 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org3bd3cfd">
-<h3 id="org3bd3cfd">binder</h3>
+<section id="slide-org4ccc2fb">
+<h3 id="org4ccc2fb">binder</h3>
 
 
 
 </section>
-<section id="slide-orgaf0d78a">
-<h3 id="orgaf0d78a">Google Colab</h3>
+<section id="slide-org96f440c">
+<h3 id="org96f440c">Google Colab</h3>
 
 
 
@@ -234,13 +234,13 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-orge54b559">
-<h2 id="orge54b559">Basics</h2>
-<div class="outline-text-2" id="text-orge54b559">
+<section id="slide-org9798eca">
+<h2 id="org9798eca">Basics</h2>
+<div class="outline-text-2" id="text-org9798eca">
 </div>
 </section>
-<section id="slide-org4b9b95b">
-<h3 id="org4b9b95b">Python as a calculator</h3>
+<section id="slide-org1226c72">
+<h3 id="org1226c72">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -260,8 +260,8 @@ for more details.
 
 
 </section>
-<section id="slide-orgb59b1ea">
-<h3 id="orgb59b1ea">Example using variables</h3>
+<section id="slide-orgfb0a973">
+<h3 id="orgfb0a973">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -279,18 +279,18 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orgc51a22a">
-<h3 id="orgc51a22a">Variables: Numbers and strings</h3>
+<section id="slide-orgf9e8f07">
+<h3 id="orgf9e8f07">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org656d400">
-<h3 id="org656d400">Variables: Lists</h3>
+<section id="slide-orga5659e2">
+<h3 id="orga5659e2">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org5ce4bf0">
-<h3 id="org5ce4bf0">Lists: Summary</h3>
+<section id="slide-orgd3c50bd">
+<h3 id="orgd3c50bd">Lists: Summary</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -325,32 +325,32 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-orgb98015a">
-<h3 id="orgb98015a">Variables: Dictionaries</h3>
+<section id="slide-org0b6a93f">
+<h3 id="org0b6a93f">Variables: Dictionaries</h3>
 
 </section>
-<section id="slide-org5d4a50e">
-<h3 id="org5d4a50e">Example using dictionaries</h3>
+<section id="slide-org0a06338">
+<h3 id="org0a06338">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org6ef475e">
-<h3 id="org6ef475e">More advanced use of dictionaries</h3>
+<section id="slide-org1bcfd73">
+<h3 id="org1bcfd73">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orgd628adf">
-<h3 id="orgd628adf"></h3>
+<section id="slide-org0224241">
+<h3 id="org0224241"></h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_dictionaries.ipynb">colab.</a>
 </p>
 
 </section>
-<section id="slide-orgf6849e2">
-<h3 id="orgf6849e2">Strings and printing</h3>
+<section id="slide-orgeec3c83">
+<h3 id="orgeec3c83">Strings and printing</h3>
 </section>
-<section id="slide-org7294740">
-<h3 id="org7294740">printing</h3>
+<section id="slide-orge84d324">
+<h3 id="orge84d324">printing</h3>
 <p>
 print('Hello')
 </p>
@@ -360,8 +360,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgedf98e8">
-<h3 id="orgedf98e8">Dictionaries</h3>
+<section id="slide-org3c18e64">
+<h3 id="org3c18e64">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -384,16 +384,16 @@ x<sub>dict</sub> = {k:k**2 for k in range(10)}
 </aside>
 
 </section>
-<section id="slide-org64700af">
-<h3 id="org64700af">loops</h3>
+<section id="slide-org2718cf3">
+<h3 id="org2718cf3">loops</h3>
 <p>
 One of the most important aspects of computers is the ability to do
 repetitive tasks.  
 </p>
 
 </section>
-<section id="slide-org99729e4">
-<h3 id="org99729e4">Functions</h3>
+<section id="slide-orgc92c5f4">
+<h3 id="orgc92c5f4">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -403,8 +403,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orga2debf9">
-<h3 id="orga2debf9">Conditionals</h3>
+<section id="slide-orgb632589">
+<h3 id="orgb632589">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -415,8 +415,8 @@ for more details.
 
 
 </section>
-<section id="slide-org530e525">
-<h3 id="org530e525">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org1f872d8">
+<h3 id="org1f872d8">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -491,8 +491,8 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-org08bed6c">
-<h2 id="org08bed6c">Importing libraries</h2>
+<section id="slide-orgb4e9469">
+<h2 id="orgb4e9469">Importing libraries</h2>
 <ul>
 <li>numpy</li>
 <li>scipy</li>
@@ -501,14 +501,11 @@ temperatures.
 
 </ul>
 
-<div>
-Please see the
-<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_imports.ipynb">
-Jupyter notebook
-</a>
-for more details.
-</div>
 
+<p>
+Please see the Jupyter notebook <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_imports.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_imports.ipynb">colab</a>
+for more details.
+</p>
 
 
 <aside class="notes">
@@ -519,8 +516,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org97ca4a7">
-<h3 id="org97ca4a7">numpy</h3>
+<section id="slide-org845f78c">
+<h3 id="org845f78c">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -551,8 +548,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-orgd157457">
-<h3 id="orgd157457">importing numpy</h3>
+<section id="slide-org3d67ee9">
+<h3 id="org3d67ee9">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -580,8 +577,14 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-orgfa6407e">
-<h3 id="orgfa6407e">matplotlib / pylab</h3>
+<section id="slide-orgb785f64">
+<h3 id="orgb785f64">matplotlib / pylab</h3>
+<ul>
+<li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
+<li>see the notebook</li>
+
+</ul>
+
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy <span style="color: #00ffff;">as</span> np
@@ -589,8 +592,6 @@ within your program.
 
 <span style="color: #eedd82;">x_data</span> = np.arange(0.0, 1.0, 0.01)
 <span style="color: #eedd82;">y_data</span> = [np.sin(x) <span style="color: #00ffff;">for</span> x <span style="color: #00ffff;">in</span> x_data]
-
-
 
 plt.show()
 
@@ -604,8 +605,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org17b1a5c">
-<h3 id="org17b1a5c">scipy</h3>
+<section id="slide-org5f66f85">
+<h3 id="org5f66f85">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -614,10 +615,20 @@ nil
 
 </ul>
 
+</section>
+<section id="slide-org8f2ab0a">
+<h3 id="org8f2ab0a">Examples of using <code>fsolve</code></h3>
+<ul>
+<li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
+<li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
+<li>CP101: Tutorial 17, Question 2 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q2.ipynb">colab</a>)</li>
+
+</ul>
+
 
 </section>
-<section id="slide-org47fb63d">
-<h3 id="org47fb63d">sympy</h3>
+<section id="slide-orgf969f8a">
+<h3 id="orgf969f8a">sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -632,8 +643,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgb44528a">
-<h3 id="orgb44528a">sympy</h3>
+<section id="slide-org8ee3fac">
+<h3 id="org8ee3fac">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -646,13 +657,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org94f8076">
-<h2 id="org94f8076">Further resources</h2>
-<div class="outline-text-2" id="text-org94f8076">
+<section id="slide-orgc1ef8ad">
+<h2 id="orgc1ef8ad">Further resources</h2>
+<div class="outline-text-2" id="text-orgc1ef8ad">
 </div>
 </section>
-<section id="slide-orgc867c4b">
-<h3 id="orgc867c4b">Installation</h3>
+<section id="slide-org8bff670">
+<h3 id="org8bff670">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -679,8 +690,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orgd942337">
-<h2 id="orgd942337">Summary</h2>
+<section id="slide-org621ad46">
+<h2 id="org621ad46">Summary</h2>
 <aside class="notes">
 nil
 </aside>
