--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgfbddd49">
-<h2 id="orgfbddd49">Navigation instructions</h2>
+<section id="slide-org31f8e9f">
+<h2 id="org31f8e9f">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orgb2474dc">
-<h2 id="orgb2474dc">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org4393149">
+<h2 id="org4393149">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,8 +103,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-orgf502c15" data-audio-src="python/">
-<h2 id="orgf502c15">Overview</h2>
+<section id="slide-org84679f4" data-audio-src="python/">
+<h2 id="org84679f4">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Basic elements of the language</li>
 <li>CP101 worked examples and tutorial problems</li>
@@ -187,16 +187,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org0f8383a" data-audio-src="python/title.mp3">
-<h3 id="org0f8383a">Python</h3>
+<section id="slide-orgb6ebc95" data-audio-src="python/title.mp3">
+<h3 id="orgb6ebc95">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org4669f66">
-<h3 id="org4669f66">Jupyter notebooks</h3>
+<section id="slide-org859e1f2">
+<h3 id="org859e1f2">Jupyter notebooks</h3>
 <aside class="notes">
 <p>
 
@@ -219,14 +219,14 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org4ccc2fb">
-<h3 id="org4ccc2fb">binder</h3>
+<section id="slide-org0b40cbe">
+<h3 id="org0b40cbe">binder</h3>
 
 
 
 </section>
-<section id="slide-org96f440c">
-<h3 id="org96f440c">Google Colab</h3>
+<section id="slide-org4d0a4e4">
+<h3 id="org4d0a4e4">Google Colab</h3>
 
 
 
@@ -234,13 +234,13 @@ mybinder.org, and the second method is with Google Colab.
 </section>
 </section>
 <section>
-<section id="slide-org9798eca">
-<h2 id="org9798eca">Basics</h2>
-<div class="outline-text-2" id="text-org9798eca">
+<section id="slide-org68bcdb8">
+<h2 id="org68bcdb8">Basics</h2>
+<div class="outline-text-2" id="text-org68bcdb8">
 </div>
 </section>
-<section id="slide-org1226c72">
-<h3 id="org1226c72">Python as a calculator</h3>
+<section id="slide-orgeb2e474">
+<h3 id="orgeb2e474">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -260,8 +260,8 @@ for more details.
 
 
 </section>
-<section id="slide-orgfb0a973">
-<h3 id="orgfb0a973">Example using variables</h3>
+<section id="slide-org4e0ab7c">
+<h3 id="org4e0ab7c">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -279,18 +279,18 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orgf9e8f07">
-<h3 id="orgf9e8f07">Variables: Numbers and strings</h3>
+<section id="slide-orgc120612">
+<h3 id="orgc120612">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orga5659e2">
-<h3 id="orga5659e2">Variables: Lists</h3>
+<section id="slide-orga1e7fa5">
+<h3 id="orga1e7fa5">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-orgd3c50bd">
-<h3 id="orgd3c50bd">Lists: Summary</h3>
+<section id="slide-orgcaf93a6">
+<h3 id="orgcaf93a6">Lists: Summary</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -325,43 +325,29 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org0b6a93f">
-<h3 id="org0b6a93f">Variables: Dictionaries</h3>
+<section id="slide-orgcd7d4cf">
+<h3 id="orgcd7d4cf">Variables: Dictionaries</h3>
 
 </section>
-<section id="slide-org0a06338">
-<h3 id="org0a06338">Example using dictionaries</h3>
+<section id="slide-orgdd41b4e">
+<h3 id="orgdd41b4e">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org1bcfd73">
-<h3 id="org1bcfd73">More advanced use of dictionaries</h3>
+<section id="slide-org419b88c">
+<h3 id="org419b88c">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org0224241">
-<h3 id="org0224241"></h3>
+<section id="slide-org8a9c7cc">
+<h3 id="org8a9c7cc"></h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_dictionaries.ipynb">colab.</a>
 </p>
 
 </section>
-<section id="slide-orgeec3c83">
-<h3 id="orgeec3c83">Strings and printing</h3>
-</section>
-<section id="slide-orge84d324">
-<h3 id="orge84d324">printing</h3>
-<p>
-print('Hello')
-</p>
-
-<aside class="notes">
-nil
-</aside>
-
-</section>
-<section id="slide-org3c18e64">
-<h3 id="org3c18e64">Dictionaries</h3>
+<section id="slide-orgc63cbdd">
+<h3 id="orgc63cbdd">Dictionaries</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_dictionaries.ipynb">
@@ -384,16 +370,8 @@ x<sub>dict</sub> = {k:k**2 for k in range(10)}
 </aside>
 
 </section>
-<section id="slide-org2718cf3">
-<h3 id="org2718cf3">loops</h3>
-<p>
-One of the most important aspects of computers is the ability to do
-repetitive tasks.  
-</p>
-
-</section>
-<section id="slide-orgc92c5f4">
-<h3 id="orgc92c5f4">Functions</h3>
+<section id="slide-org2c0de21">
+<h3 id="org2c0de21">Functions</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
@@ -403,8 +381,8 @@ for more details.
 </div>
 
 </section>
-<section id="slide-orgb632589">
-<h3 id="orgb632589">Conditionals</h3>
+<section id="slide-org1f28fde">
+<h3 id="org1f28fde">Conditionals</h3>
 <div>
 Please see the
 <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">
@@ -413,10 +391,9 @@ Jupyter notebook
 for more details.
 </div>
 
-
 </section>
-<section id="slide-org1f872d8">
-<h3 id="org1f872d8">Heat capacity of ideal gases: Shomate equation</h3>
+<section id="slide-org49e755e">
+<h3 id="org49e755e">Heat capacity of ideal gases: Shomate equation</h3>
 <aside class="notes">
 <p>
 
@@ -491,13 +468,13 @@ temperatures.
 </section>
 </section>
 <section>
-<section id="slide-orgb4e9469">
-<h2 id="orgb4e9469">Importing libraries</h2>
+<section id="slide-org38a890b">
+<h2 id="org38a890b">Importing libraries</h2>
 <ul>
-<li>numpy</li>
-<li>scipy</li>
-<li>matplotlib</li>
-<li>sympy</li>
+<li>Matplotlib</li>
+<li>Numpy</li>
+<li>Scipy</li>
+<li>Sympy</li>
 
 </ul>
 
@@ -516,8 +493,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org845f78c">
-<h3 id="org845f78c">numpy</h3>
+<section id="slide-org172193f">
+<h3 id="org172193f">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -548,8 +525,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org3d67ee9">
-<h3 id="org3d67ee9">importing numpy</h3>
+<section id="slide-org0b1780b">
+<h3 id="org0b1780b">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -577,8 +554,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-orgb785f64">
-<h3 id="orgb785f64">matplotlib / pylab</h3>
+<section id="slide-org89f7e6c">
+<h3 id="org89f7e6c">matplotlib / pylab</h3>
 <ul>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
 <li>see the notebook</li>
@@ -605,8 +582,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-org5f66f85">
-<h3 id="org5f66f85">scipy</h3>
+<section id="slide-org732ff89">
+<h3 id="org732ff89">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -616,8 +593,8 @@ nil
 </ul>
 
 </section>
-<section id="slide-org8f2ab0a">
-<h3 id="org8f2ab0a">Examples of using <code>fsolve</code></h3>
+<section id="slide-org77ba8b4">
+<h3 id="org77ba8b4">Examples of using <code>fsolve</code></h3>
 <ul>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
@@ -627,8 +604,8 @@ nil
 
 
 </section>
-<section id="slide-orgf969f8a">
-<h3 id="orgf969f8a">sympy</h3>
+<section id="slide-orge3c14b6">
+<h3 id="orge3c14b6">Sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -637,14 +614,17 @@ nil
 
 </ul>
 
+<p>
+see the Jupyter notebook (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_sympy.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_sympy.ipynb">colab</a>)
+</p>
 
 <aside class="notes">
 nil
 </aside>
 
 </section>
-<section id="slide-org8ee3fac">
-<h3 id="org8ee3fac">sympy</h3>
+<section id="slide-org1e72071">
+<h3 id="org1e72071">sympy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim>
@@ -657,13 +637,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgc1ef8ad">
-<h2 id="orgc1ef8ad">Further resources</h2>
-<div class="outline-text-2" id="text-orgc1ef8ad">
+<section id="slide-org9836941">
+<h2 id="org9836941">Further resources</h2>
+<div class="outline-text-2" id="text-org9836941">
 </div>
 </section>
-<section id="slide-org8bff670">
-<h3 id="org8bff670">Installation</h3>
+<section id="slide-orga6b608e">
+<h3 id="orga6b608e">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -690,8 +670,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org621ad46">
-<h2 id="org621ad46">Summary</h2>
+<section id="slide-orgaac76f3">
+<h2 id="orgaac76f3">Summary</h2>
 <aside class="notes">
 nil
 </aside>
